menambah dokumentasi menjadi 6

--- a/index.html
+++ b/index.html
@@ -138,6 +138,14 @@
               </div>
             </div>
           </div>
+          <div class="col-md-4 mb-3 text-center">
+            <div class="card">
+              <img src="img/dokumentasi/6.jpeg" class="card-img-top" alt="Dokumentasi 6" />
+              <div class="card-body">
+                <p class="card-text">1st place in photography and 3rd place in videography at the Kediri city police traffic unit</p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
