ubah gambar dokumentasi 6

--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
           </div>
           <div class="col-md-4 mb-3 text-center">
             <div class="card">
-              <img src="img/dokumentasi/6.jpeg" class="card-img-top" alt="Dokumentasi 6" />
+              <img src="img/dokumentasi/6.jpg" class="card-img-top" alt="Dokumentasi 6" />
               <div class="card-body">
-                <p class="card-text">1st place in photography and 3rd place in videography at the Kediri city police traffic unit</p>
+                <p class="card-text">2nd place in Digitalization of Indonesian History in the Frame of Nationalism</p>
               </div>
             </div>
           </div>
