menambahkan fitur kirim contact form & mengganti bahasa indonesia

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <section class="jumbotron text-center">
       <img src="img/radit putra.jpeg" alt="Radit Putra" width="180" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Radit Putra</h1>
-      <p class="lead">Photographer | Videographer</p>
+      <p class="lead">Fotografer | Videografer</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#fff"
@@ -72,10 +72,10 @@
         </div>
         <div class="row justify-content-center fs-5 text-center">
           <div class="col-md-4">
-            <p>Radit Putra Pratama, 22 August 2006. Lives in Kediri, East Java. a student who is currently studying at the Pawyatan Daha 1 Vocational School, Kediri City, majoring in multimedia.</p>
+            <p>Radit Putra Pratama, 22 Agustus 2006. Tinggal di Kediri, Jawa Timur. Siswa yang saat ini bersekolah di SMK Pawyatan Daha 1 Kota Kediri jurusan Multimedia.</p>
           </div>
           <div class="col-md-4">
-            <p>Became interested in and built a career as a photographer & videographer since starting an internship at Pawon Cinema. So far he has created several works and has won various competitions.</p>
+            <p>Menjadi tertarik dan membangun karir sebagai fotografer & videografer sejak mulai magang di Pawon Sinema. Sejauh ini ia telah menciptakan beberapa karya dan memenangkan berbagai kompetisi.</p>
           </div>
         </div>
       </div>
@@ -102,7 +102,7 @@
             <div class="card">
               <img src="img/dokumentasi/1.jpeg" class="card-img-top" alt="Dokumentasi 1" />
               <div class="card-body">
-                <p class="card-text">Internship at Pawon Cinema 2022</p>
+                <p class="card-text">Magang di Pawon Sinema 2022</p>
               </div>
             </div>
           </div>
@@ -110,7 +110,7 @@
             <div class="card">
               <img src="img/dokumentasi/2.jpeg" class="card-img-top" alt="Dokumentasi 2" />
               <div class="card-body">
-                <p class="card-text">Videography training at UPT. Pengembangan Teknis dan Keterampilan Kejuruan Jawa Timur</p>
+                <p class="card-text">Pelatihan videografi UPT. Pengembangan Teknis dan Keterampilan Kejuruan Jawa Timur</p>
               </div>
             </div>
           </div>
@@ -118,7 +118,7 @@
             <div class="card">
               <img src="img/dokumentasi/3.jpeg" class="card-img-top" alt="Dokumentasi 3" />
               <div class="card-body">
-                <p class="card-text">Internship at Pawon Cinema 2023</p>
+                <p class="card-text">Magang di Pawon Cinema 2023</p>
               </div>
             </div>
           </div>
@@ -126,7 +126,7 @@
             <div class="card">
               <img src="img/dokumentasi/4.jpeg" class="card-img-top" alt="Dokumentasi 4" />
               <div class="card-body">
-                <p class="card-text">3rd place in the Kediri city cultural heritage vlog</p>
+                <p class="card-text">Juara 3 lomba vlog cagar budaya Kota Kediri</p>
               </div>
             </div>
           </div>
@@ -134,7 +134,7 @@
             <div class="card">
               <img src="img/dokumentasi/5.jpeg" class="card-img-top" alt="Dokumentasi 5" />
               <div class="card-body">
-                <p class="card-text">1st place in photography and 3rd place in videography at the Kediri city police traffic unit</p>
+                <p class="card-text">Juara 1 bidang fotografi dan juara 3 bidang videografi di Satlantas Polres Kota Kediri</p>
               </div>
             </div>
           </div>
@@ -142,7 +142,7 @@
             <div class="card">
               <img src="img/dokumentasi/6.jpg" class="card-img-top" alt="Dokumentasi 6" />
               <div class="card-body">
-                <p class="card-text">2nd place in Digitalization of Indonesian History in the Frame of Nationalism</p>
+                <p class="card-text">Juara 2 Digitalisasi Sejarah Indonesia dalam Bingkai Nasionalisme</p>
               </div>
             </div>
           </div>
@@ -164,7 +164,7 @@
         <div class="row text-center mb-3">
           <div class="col">
             <h2>Projects</h2>
-            <p>The following are some of the works that I have made so far</p>
+            <p>Berikut merupakan beberapa projek yang pernah saya buat selama ini</p>
           </div>
         </div>
         <div class="row">
@@ -173,16 +173,16 @@
               <div class="col-md-6 mb-3">
                 <div class="card">
                   <div class="card-body">
-                    <h5 class="card-title">Videography</h5>
-                    <a href="https://drive.google.com/drive/folders/1-1fiV9kgApSQufJumMGJYRIBpJyy-2XP?usp=drive_link" class="btn btn-primary">Visit Here</a>
+                    <h5 class="card-title">Videografi</h5>
+                    <a href="https://drive.google.com/drive/folders/1-1fiV9kgApSQufJumMGJYRIBpJyy-2XP?usp=drive_link" class="btn btn-primary">Lihat Disini</a>
                   </div>
                 </div>
               </div>
               <div class="col-md-6 mb-3">
                 <div class="card">
                   <div class="card-body">
-                    <h5 class="card-title">Photography</h5>
-                    <a href="https://drive.google.com/drive/folders/105_-Jgzsl5tBgUs7oqZqeGnqvw_G2--g?usp=drive_link" class="btn btn-primary">Visit Here</a>
+                    <h5 class="card-title">Fotografi</h5>
+                    <a href="https://drive.google.com/drive/folders/105_-Jgzsl5tBgUs7oqZqeGnqvw_G2--g?usp=drive_link" class="btn btn-primary">Lihat Disini</a>
                   </div>
                 </div>
               </div>
@@ -210,20 +210,29 @@
         </div>
         <div class="row justify-content-center">
           <div class="col-md-6">
-            <form>
+            <div class="alert alert-success alert-dismissible fade show d-none my-alert" role="alert">
+              <strong>Terimakasih!</strong> Pesan anda sudah kami terima.
+              <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+            <form name="raditt-contact-form">
               <div class="mb-3">
                 <label for="name" class="form-label">Nama Lengkap</label>
-                <input type="text" class="form-control" id="name" aria-describedby="name" />
+                <input type="text" class="form-control" id="name" aria-describedby="name" name="nama" />
               </div>
               <div class="mb-3">
                 <label for="email" class="form-label">Email</label>
-                <input type="email" class="form-control" id="email" aria-describedby="email" />
+                <input type="email" class="form-control" id="email" aria-describedby="email" name="email" />
               </div>
               <div class="mb-3">
                 <label for="pesan" class="form-label">Pesan</label>
-                <textarea class="form-control" id="pesan" rows="3"></textarea>
+                <textarea class="form-control" id="pesan" rows="3" name="pesan"></textarea>
               </div>
-              <button type="submit" class="btn btn-primary">Kirim</button>
+              <button type="submit" class="btn btn-primary btn-kirim">Kirim</button>
+
+              <button class="btn btn-primary btn-loading d-none" type="button" disabled>
+                <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                Loading...
+              </button>
             </form>
           </div>
         </div>
@@ -245,5 +254,33 @@
     <!-- Akhir Footer -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
+    <script>
+      const scriptURL = 'https://script.google.com/macros/s/AKfycbzjIATqLhqoXT5cIFUla0EXeDXXoUNcZDFO5YNJtPKnGfDnUtLG9RCEGCNW0ejW_1JL/exec';
+      const form = document.forms['raditt-contact-form'];
+      const btnKirim = document.querySelector('.btn-kirim');
+      const btnLoading = document.querySelector('.btn-loading');
+      const myAlert = document.querySelector('.my-alert');
+
+      form.addEventListener('submit', (e) => {
+        e.preventDefault();
+        // ketika tombol submit diklik
+        // tampilkan tombol loading, hilangkan tombol kirim
+        btnLoading.classList.toggle('d-none');
+        btnKirim.classList.toggle('d-none');
+        fetch(scriptURL, { method: 'POST', body: new FormData(form) })
+          .then((response) => {
+            // tampilkan tombol kirim, hilangkan tombol loading
+            btnLoading.classList.toggle('d-none');
+            btnKirim.classList.toggle('d-none');
+            // tampilkan alert
+            myAlert.classList.toggle('d-none');
+            // reset formnya
+            form.reset();
+            console.log('Success!', response);
+          })
+          .catch((error) => console.error('Error!', error.message));
+      });
+    </script>
   </body>
 </html>
